exports[`BoardItemsList rendering should render properly with multiple boards 1`] = `
<div
  className="row">
  <div
    className="col-sm-3"
    onClick={[Function]}>
    <div
      className="my-board-item">
      boardTitle1
    </div>
  </div>
  <div
    className="col-sm-3"
    onClick={[Function]}>
    <div
      className="my-board-item">
      boardTitle2
    </div>
  </div>
  <div
    className="col-sm-3"
    onClick={[Function]}>
    <div
      className="my-board-item">
      boardTitle3
    </div>
  </div>
  <div
    className="col-sm-3">
    <form
      className="my-add-new-board"
      onSubmit={[Function]}>
      <div
        className="form-group">
        <input
          className="form-control"
          id={undefined}
          onChange={[Function]}
          placeholder="Add new board..."
          type="text"
          value="" />
      </div>
    </form>
  </div>
</div>
`;

exports[`BoardItemsList rendering should render properly with no boards 1`] = `
<div
  className="row">
  <div
    className="col-sm-3">
    <form
      className="my-add-new-board"
      onSubmit={[Function]}>
      <div
        className="form-group">
        <input
          className="form-control"
          id={undefined}
          onChange={[Function]}
          placeholder="Add new board..."
          type="text"
          value="" />
      </div>
    </form>
  </div>
</div>
`;

exports[`BoardItemsList rendering should render properly with one board 1`] = `
<div
  className="row">
  <div
    className="col-sm-3"
    onClick={[Function]}>
    <div
      className="my-board-item">
      boardTitle1
    </div>
  </div>
  <div
    className="col-sm-3">
    <form
      className="my-add-new-board"
      onSubmit={[Function]}>
      <div
        className="form-group">
        <input
          className="form-control"
          id={undefined}
          onChange={[Function]}
          placeholder="Add new board..."
          type="text"
          value="" />
      </div>
    </form>
  </div>
</div>
`;
